# glama-status-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  PRD.md  README.md  glama-status-mcp-backend.spec  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  run_server.py  start.ps1
.github/workflows/: ci.yml  release.yml
docs/: CONFIGURATION.md  DEVELOPMENT.md  GLAMA_SCORING.md  TOOLS.md
mcpb/: .mcpbignore
mcpb/assets/prompts/: examples.json  system.md  user.md
native/: Cargo.toml  build.ps1  tauri.conf.json
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
scripts/: check_scored.py  inspect3.py  inspect4.py  inspect5.py  inspect6.py  inspect7.py  inspect8.py  inspect_coh.py  inspect_glama_page.py  inspect_glama_page2.py  inspect_meta2.py  inspect_meta3.py  inspect_meta4.py  inspect_meta5.py  inspect_metadata.py  refresh.py  register-daily-refresh.ps1  smoke-test-backend.ps1  smoke.py  test_scrape.py
src/glama_status_mcp/: __main__.py  config.py  database.py  llm.py  models.py  reporting.py  scraper.py  server.py
tests/: conftest.py  test_database.py  test_scraper.py  test_server.py
webapp/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
webapp/e2e/: fleet-audit.spec.ts
webapp/src/: App.tsx  index.css  store.ts  types.ts
webapp/src/components/: ChatPage.tsx  HelpPage.tsx  RefreshPanel.tsx  ReportView.tsx  ScoreTable.tsx  SettingsPage.tsx  Sidebar.tsx  ToolBreakdown.tsx  ToolsPage.tsx
