[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glama-status-mcp"
version = "0.1.0"
description = "Daily-refreshed Glama score tracker for the fleet  -  scrapes per-tool TDQS grades, stores in SQLite, surfaces via MCP tools and a web dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sandraschi" }]
keywords = ["mcp", "glama", "scoring", "tdqs", "fleet", "dashboard"]

dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "prefab-ui>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
]

[project.scripts]
glama-status-mcp = "glama_status_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/glama_status_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "PTH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
